# kuka-ros-trials

./: .gitignore  README.md  REAMDME.md
install/: local_setup.sh  setup.sh
kuka_commander/: setup.cfg  setup.py
kuka_config/: CMakeLists.txt
kuka_config/config/: initial_positions.yaml  joint_limits.yaml  kuka_kr10r1420.ros2_control.xacro  kuka_kr10r1420.srdf  kuka_kr10r1420.urdf.xacro  moveit_controllers.yaml  ros2_controllers.yaml
kuka_config/launch/: demo.launch.py  gazebo.launch.py  move_group.launch.py  rsp.launch.py  spawn_controllers.launch.py  warehouse_db.launch.py
kuka_kr10_r1440/: CMakeLists.txt  package.xml
kuka_kr10_r1440/launch/: display.launch.py  gazebo.launch  gazebo.launch.py
kuka_kr10_r1440/meshes/: elbow.STL
kuka_kr10_r1440/urdf/: kuka_kr10_r1440.xacro  laser_profiler.xacro  my_robot.urdf.xacro
kuka_trials/: package.xml  setup.cfg  setup.py
kuka_trials/launch/: display.launch.py  gazebo.launch.py
kuka_trials/node/: pointcloud_builder.py
kuka_trials/urdf/: common_materials.xacro  drill_bit.urdf.xacro  kr10r1420.xacro  kr10r1420_macro.xacro  lidar.xacro  robot.xacro  scancontrol_26x0_29x0_25_macro.xacro
log/: latest_build
my_robot_bringup/: CMakeLists.txt  package.xml  setup.py
my_robot_bringup/node/: pointcloud_builder.py
my_robot_commander_cpp/: CMakeLists.txt  package.xml
my_robot_commander_cpp/src/: test_moveit.cpp
my_robot_description/: CMakeLists.txt
my_robot_description/config/: ros_gz_bridge.yaml
my_robot_description/launch/: display.launch.py  gazebo.launch.py
my_robot_description/meshes/: base_link.STL  end_effector.STL  forearm.STL  main.STL  tip.STL
my_robot_description/rviz/: display_config.rviz
my_robot_description/urdf/: drill_bit.xacro  kuka_kr10_r1440.csv  kuka_kr10_r1440.xacro  laser_profiler.xacro  my_robot.urdf.xacro
my_robot_interfaces/: CMakeLists.txt  package.xml
my_robot_interfaces/srv/: DoCalibration.srv
my_robot_movit_config/: .setup_assistant  CMakeLists.txt
my_robot_movit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  my_robot.ros2_control.xacro  my_robot.srdf  my_robot.urdf.xacro  ros2_controllers.yaml
my_robot_movit_config/launch/: demo.launch.py  gazebo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
(+93 files in other folders)
