<package format="3">
  <name>kuka_kr10_r1440</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for kuka_kr10_r1440</p>
    <p>This package contains configuration data, 3D models and launch files for </p>
    <p>kuka_kr10_r1440 robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
 
  <build_depend>launch</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>rviz2</build_depend>
  <build_depend>joint_state_publisher_gui</build_depend>
  <build_depend>gazebo_ros</build_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
